k8/Frontend/Deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-stable
  namespace: production
spec:
  replicas: 3
  selector:
    matchLabels:
      app: build-max-frontend 
  template:
    metadata:
      labels:
        app: build-max-frontend
        version: v1 
    spec:
      containers:
      - name: frontend
        image: soban11776/bm-frontend:v1 
        command: ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
        ports:
        - containerPort: 5173 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-canary
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: build-max-frontend 
  template:
    metadata:
      labels:
        app: build-max-frontend
        version: v2
    spec:
      containers:
      - name: frontend
        image: soban11776/bm-frontend:v1 
        command: ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
        ports:
        - containerPort: 5173
