k8/Frontend/Service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: production
spec:
  selector:
    app: build-max-frontend 
  ports:
    - port: 80
      targetPort: 3000
  type: LoadBalancer
