k8/Frontend/ingress-stable.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: production
spec:
  ingressClassName: nginx
  rules:
  - host: build-max.local # Use a fake domain for testing
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service 
            port:
              number: 80
